--- a/css/module.css
+++ b/css/module.css
@@ -1,9 +1,142 @@
+.c {
+    text-align: center;
+    vertical-align: middle !important;
+}
+
+.m {
+    vertical-align: middle !important;
+}
+
+h1.my,
+h2.my,
+h1>span.my,
+h2>span.my {
+    padding: 6px;
+    /* 離標題邊框距離 */
+    text-align: left;
+    /* 文字靠左 */
+    font-weight: normal;
+    /* 不要粗體 */
+    font-family: HanWangMingBlack, jf-openhuninn, 'Noto Sans TC', Mamelon;
+    /* 字型 */
+    background: -webkit-linear-gradient(rgb(89, 112, 134), rgb(33, 51, 51));
+    /* 漸層顏色 */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
+}
+
+h3.my,
+h4.my,
+h5.my,
+h3>span.my,
+h4>span.my,
+h5>span.my {
+    padding: 6px;
+    /* 離標題邊框距離 */
+    text-align: left;
+    /* 文字靠左 */
+    font-weight: normal;
+    /* 不要粗體 */
+    font-family: jf-openhuninn, 'Noto Sans TC', Mamelon;
+    /* 字型 */
+    background: -webkit-linear-gradient(rgb(126, 92, 64), rgb(92, 41, 56));
+    /* 漸層顏色 */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.my-title {
+    padding: 6px;
+    /* 離標題邊框距離 */
+    text-align: left;
+    /* 文字靠左 */
+    font-weight: normal;
+    /* 不要粗體 */
+    font-family: jf-openhuninn, 'Noto Sans TC', Mamelon;
+    color: #3a322e;
+}
+
+.my-border {
+    padding: 12px 20px;
+    border: 1px solid rgb(225, 225, 225);
+    border-radius: 8px;
+    background: rgb(245, 245, 245);
+    /* box-shadow: 0px 0px 6px 1px rgba(37, 37, 37, 0.2); */
+    margin: 10px auto;
+}
+
+.my-sm-border {
+    padding: 6px 10px 8px 10px;
+    border: 1px solid rgb(225, 225, 225);
+    border-radius: 4px;
+    background: rgb(245, 245, 245);
+    margin: 10px auto;
+}
+
+ol {
+    list-style-type: decimal;
+    list-style-position: outside;
+    padding-left: 20px;
+}
+
+ul {
+    list-style-type: disc;
+    list-style-position: outside;
+    padding-left: 20px;
+}
+
+.tooltip-inner {
+    max-width: 600px;
+    font-size: 0.95em;
+    background-color: #830d48;
+    box-shadow: 2px 2px 5px 0px rgba(0, 0, 0, 0.5);
+    line-height: 1.8;
+}
+
+.tooltip.bs-tooltip-right .arrow:before {
+    border-right-color: #830d48 !important;
+}
+
+.tooltip.bs-tooltip-left .arrow:before {
+    border-left-color: #830d48 !important;
+}
+
+.tooltip.bs-tooltip-bottom .arrow:before {
+    border-bottom-color: #830d48 !important;
+}
+
+.tooltip.bs-tooltip-top .arrow:before {
+    border-top-color: #830d48 !important;
+}
+
+.bar {
+    text-align: center;
+    margin: 3em auto;
+}
+
+.thumb-cate-img {
+    object-fit: cover;
+    padding: 0px;
+    background-color: rgb(212, 212, 212);
+}
+
 .thumb-img {
     width: 100%;
     height: 150px;
     object-fit: cover;
-    padding:0px;
+    padding: 0px;
     background-color: rgb(212, 212, 212);
+}
+
+div.polaroid-cate {
+    display: inline-block;
+    width: 220px;
+    height: 190px;
+    margin: 10px 10px;
+    padding: 0px;
+    background-color: #f7d337;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 div.polaroid {
@@ -11,7 +144,7 @@ div.polaroid {
     width: 220px;
     height: 190px;
     margin: 10px 10px;
-    padding:0px;
+    padding: 0px;
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -19,7 +152,7 @@ div.polaroid {
 div.polaroid-container {
     text-align: center;
     padding: 0px 20px;
-    background-color: white;
+    /* background-color: white; */
 }
 
 div.polaroid-container>p {
