1.修正後台分類管理計數不正確導致無法刪除問題 2.調整版面，使之避免破版

--- a/css/module.css
+++ b/css/module.css
@@ -152,7 +152,8 @@ div.polaroid {
 div.polaroid-container {
     text-align: center;
     padding: 0px 20px;
-    /* background-color: white; */
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 div.polaroid-container>p {
